[gd_scene load_steps=29 format=3 uid="uid://hhngj211rolu"]

[ext_resource type="Script" path="res://scripts/select_level.gd" id="1_sr843"]
[ext_resource type="Texture2D" uid="uid://dihyy2anqhwyh" path="res://assets/graphics/illustration/The_Scene_5.jpg" id="2_a2e1m"]
[ext_resource type="Texture2D" uid="uid://e1ac37bnuybu" path="res://assets/graphics/Stage_Select.png" id="3_v1ghj"]
[ext_resource type="Texture2D" uid="uid://48dno7qbbllg" path="res://assets/graphics/bubble.png" id="4_bo04q"]
[ext_resource type="Texture2D" uid="uid://dfkrbh4co1jgg" path="res://assets/graphics/Shoes.png" id="5_8ebt5"]
[ext_resource type="Texture2D" uid="uid://dx8dirs8coupl" path="res://assets/graphics/Beach_Ball.png" id="6_1xh6w"]
[ext_resource type="Texture2D" uid="uid://cy28iifbek8s4" path="res://assets/graphics/Camera.png" id="7_60jrh"]
[ext_resource type="Texture2D" uid="uid://bebaporg015n5" path="res://assets/graphics/Ribbon.png" id="8_6mbir"]
[ext_resource type="Texture2D" uid="uid://bavqdbi1j0y8t" path="res://assets/graphics/Bonfire.png" id="9_dkmly"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wx0rr"]
texture = ExtResource("3_v1ghj")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3votq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uo18y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rbyj5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_468ud"]

[sub_resource type="Animation" id="Animation_3wol8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_v2qxr"]
resource_name = "reveal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_pyqb8"]
resource_name = "sil_reveal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_251b0"]
_data = {
"RESET": SubResource("Animation_3wol8"),
"reveal": SubResource("Animation_v2qxr"),
"sil_reveal": SubResource("Animation_pyqb8")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yv4ax"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ne20"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dxexg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ec28l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_puvw8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_myt7t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ja7ig"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m2w2g"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_24r7r"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jsrcn"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Scene1" type="Control" node_paths=PackedStringArray("animButtons", "buttons", "pics")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sr843")
animButtons = [NodePath("Bubble 1/AnimationPlayer"), NodePath("Bubble 2/AnimationPlayer"), NodePath("Bubble 3/AnimationPlayer"), NodePath("Bubble 4/AnimationPlayer"), NodePath("Bubble 5/AnimationPlayer")]
buttons = [NodePath("Bubble 1/Button"), NodePath("Bubble 2/Button"), NodePath("Bubble 3/Button"), NodePath("Bubble 4/Button"), NodePath("Bubble 5/Button")]
pics = [NodePath("Bubble 1/TextureRect"), NodePath("Bubble 2/TextureRect"), NodePath("Bubble 3/TextureRect"), NodePath("Bubble 4/TextureRect"), NodePath("Bubble 5/TextureRect")]

[node name="Sprite2D" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_a2e1m")
expand_mode = 5
stretch_mode = 4

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_wx0rr")

[node name="Bubble 1" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -970.0
offset_top = -539.0
offset_right = -359.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_bo04q")
expand_mode = 2
stretch_mode = 4

[node name="TextureRect" type="TextureRect" parent="Bubble 1"]
visible = false
modulate = Color(0, 0, 0, 0)
layout_mode = 0
offset_left = 41.0
offset_top = -4.0
offset_right = 553.0
offset_bottom = 608.0
texture = ExtResource("5_8ebt5")

[node name="Button" type="Button" parent="Bubble 1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = 59.0
offset_right = -84.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_3votq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_uo18y")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rbyj5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_468ud")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Bubble 1"]
libraries = {
"": SubResource("AnimationLibrary_251b0")
}

[node name="Bubble 2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -527.0
offset_right = 319.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_bo04q")
expand_mode = 2

[node name="TextureRect" type="TextureRect" parent="Bubble 2"]
visible = false
modulate = Color(0, 0, 0, 0)
layout_mode = 0
offset_left = 49.0
offset_top = 34.0
offset_right = 561.0
offset_bottom = 546.0
texture = ExtResource("6_1xh6w")

[node name="Button" type="Button" parent="Bubble 2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 83.0
offset_top = 53.0
offset_right = -81.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_styles/disabled = SubResource("StyleBoxEmpty_yv4ax")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_yv4ax")
theme_override_styles/hover = SubResource("StyleBoxEmpty_1ne20")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_dxexg")
theme_override_styles/normal = SubResource("StyleBoxEmpty_468ud")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Bubble 2"]
libraries = {
"": SubResource("AnimationLibrary_251b0")
}

[node name="Bubble 3" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 383.0
offset_top = -533.0
offset_right = 991.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_bo04q")
expand_mode = 2

[node name="TextureRect" type="TextureRect" parent="Bubble 3"]
visible = false
modulate = Color(0, 0, 0, 0)
layout_mode = 0
offset_left = 42.0
offset_top = 38.0
offset_right = 554.0
offset_bottom = 550.0
texture = ExtResource("7_60jrh")

[node name="Button" type="Button" parent="Bubble 3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 90.0
offset_top = 55.0
offset_right = -74.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ec28l")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_puvw8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ec28l")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_myt7t")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ja7ig")
theme_override_styles/normal = SubResource("StyleBoxEmpty_468ud")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Bubble 3"]
libraries = {
"": SubResource("AnimationLibrary_251b0")
}

[node name="Bubble 4" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -646.0
offset_top = -63.0
offset_right = -3.0
offset_bottom = 519.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_bo04q")
expand_mode = 2

[node name="TextureRect" type="TextureRect" parent="Bubble 4"]
visible = false
modulate = Color(0, 0, 0, 0)
layout_mode = 0
offset_left = 60.0
offset_top = 53.0
offset_right = 572.0
offset_bottom = 565.0
texture = ExtResource("8_6mbir")

[node name="Button" type="Button" parent="Bubble 4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 52.0
offset_right = -64.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_styles/disabled = SubResource("StyleBoxFlat_m2w2g")
theme_override_styles/hover = SubResource("StyleBoxFlat_m2w2g")
theme_override_styles/pressed = SubResource("StyleBoxFlat_24r7r")
theme_override_styles/normal = SubResource("StyleBoxFlat_jsrcn")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Bubble 4"]
libraries = {
"": SubResource("AnimationLibrary_251b0")
}

[node name="Bubble 5" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 96.0
offset_top = -62.0
offset_right = 691.0
offset_bottom = 533.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_bo04q")
expand_mode = 2

[node name="TextureRect" type="TextureRect" parent="Bubble 5"]
visible = false
modulate = Color(0, 0, 0, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.0
offset_top = -224.5
offset_right = 215.0
offset_bottom = 224.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_dkmly")
expand_mode = 1

[node name="Button" type="Button" parent="Bubble 5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 73.0
offset_top = 63.0
offset_right = -91.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_styles/disabled = SubResource("StyleBoxFlat_m2w2g")
theme_override_styles/hover = SubResource("StyleBoxFlat_m2w2g")
theme_override_styles/pressed = SubResource("StyleBoxFlat_24r7r")
theme_override_styles/normal = SubResource("StyleBoxFlat_jsrcn")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Bubble 5"]
libraries = {
"": SubResource("AnimationLibrary_251b0")
}

[connection signal="pressed" from="Bubble 1/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Bubble 2/Button" to="." method="_on_button_pressed2"]
[connection signal="pressed" from="Bubble 3/Button" to="." method="_on_button_pressed3"]
[connection signal="pressed" from="Bubble 4/Button" to="." method="_on_button_pressed4"]
[connection signal="pressed" from="Bubble 5/Button" to="." method="_on_button_pressed5"]
